# backend/openapi.json
@@ -197,6 +197,42 @@
         ]
       }
     },
+    "/api/users/{id}/toggle-driver-status": {
+      "patch": {
+        "operationId": "UsersController_toggleDriverStatus",
+        "summary": "Toggle whether user is eligible to be a driver",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PublicUserDto"
+                }
+              }
+            }
+          }
+        },
+        "tags": [
+          "users"
+        ],
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      }
+    },
     "/api/auth/login": {
       "post": {
         "operationId": "AuthController_login",
@@ -265,12 +301,130 @@
             "description": ""
           }
         }
+      },
+      "post": {
+        "operationId": "TripsController_createTrip",
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": ""
+          }
+        }
       }
     },
     "/api/trips/history": {
       "get": {
         "operationId": "TripsController_findAllCompleted",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "page",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "search",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortBy",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortOrder",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/api/trips/{id}/history": {
+      "get": {
+        "operationId": "TripsController_getTripHistory",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "page",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "search",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "filterAction",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortBy",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortOrder",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -319,6 +473,24 @@
             }
           }
         },
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      },
+      "delete": {
+        "operationId": "TripsController_deleteTrip",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": ""
@@ -439,6 +611,14 @@
             "schema": {
               "type": "number"
             }
+          },
+          {
+            "name": "version",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
           }
         ],
         "responses": {
@@ -469,6 +649,72 @@
       }
     },
     "/api/trips/{id}/parcels": {
+      "get": {
+        "operationId": "TripsController_getParcels",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "page",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "limit",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "search",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "status",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortBy",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "sortOrder",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": ""
+          }
+        }
+      },
       "post": {
         "operationId": "TripsController_addParcel",
         "parameters": [
@@ -553,6 +799,14 @@
             "schema": {
               "type": "number"
             }
+          },
+          {
+            "name": "version",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
           }
         ],
         "responses": {
@@ -570,6 +824,14 @@
             "name": "id",
             "required": true,
             "in": "path",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "version",
+            "required": true,
+            "in": "query",
             "schema": {
               "type": "number"
             }
@@ -882,6 +1144,11 @@
               "driver"
             ],
             "example": "driver"
+          },
+          "is_driver": {
+            "type": "boolean",
+            "example": true,
+            "description": "Чи може користувач бути призначений водієм на рейс"
           }
         },
         "required": [
@@ -889,7 +1156,8 @@
           "phone",
           "first_name",
           "last_name",
-          "role"
+          "role",
+          "is_driver"
         ]
       },
       "UserListItemDto": {
@@ -919,6 +1187,11 @@
             ],
             "example": "driver"
           },
+          "is_driver": {
+            "type": "boolean",
+            "example": true,
+            "description": "Чи може користувач бути призначений водієм на рейс"
+          },
           "created_at": {
             "type": "string",
             "example": "2024-01-01T00:00:00.000Z"
@@ -930,6 +1203,7 @@
           "first_name",
           "last_name",
           "role",
+          "is_driver",
           "created_at"
         ]
       },
